--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ h1{
     padding: 0cm;
     text-align: center;
     max-height: fit-content;
-    color: rgb(61, 104, 104);
+    color: rgb(3, 43, 43);
 }
 body{
-    background-color: black;
-    
+    background-color: rgb(190, 96, 96);
+
 }
